#ADD 1. 트랜잭션 매니저 2. 트랜잭션 템플릿 3. 트랜잭션 AOP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 
+# ??? ?? ?? ?? ??
+spring.datasource.url=jdbc:h2:tcp://localhost/~/dev/h2/hellospringdb
+spring.datasource.username=sa
+spring.datasource.password=
